Fix product div jumping when new content enters headline and subline

--- a/style.css
+++ b/style.css
@@ -150,17 +150,12 @@ nav {
 .main-content{
 	position: relative;
 	width: 900px;
-	margin: 35px auto;
+	margin: 38px auto;
 	text-align: center;
 }
 
-.logo{
-	margin-bottom: 10px;
-}
-
-
 .headline{
-	margin: 10px auto;
+	margin: 15px auto;
 	font-family: 'Crimson-Text-Semibold', 'Times New Roman', Georgia, serif;
 }
 
@@ -170,9 +165,9 @@ nav {
 }
 
 .subline-replace{
-	margin: 20px auto 30px auto;
+	margin: 25px auto 35px auto;
 	font-family: 'Lucida Grande', Verdana, sans-serif;
-	line-height: 120%;
+	line-height: 130%;
 	width: 95%;
 }
 
